# setup.cfg is an ini file that contains option defaults for setup.py commands
# See https://packaging.python.org/guides/distributing-packages-using-setuptools/
[metadata]
name = repomaker
version = 0.1.0
author = Mads Meisner-Jensen
maintainer = Mads Meisner-Jensen
description = Small Python module to create git repositories programmatically. Useful for unit testing.
long_description = file: README.md
long_description_content_type = text/markdown
license: GPL-3.0-only
keywords: git, unittest
url = https://github.com/mmeisner/repomaker
project_urls =
    Bug Tracker = https://github.com/mmeisner/repomaker/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: POSIX
    License :: OSI Approved :: GNU General Public License v3.0

[options]
packages = repomaker, repomaker/repo
python_requires = >=3.6

# setup.cfg files are general purpose configuration files can also be used
# to hold pytest configuration if they have a [tool:pytest] section.
#
# Usage of setup.cfg is not recommended unless for very simple use cases.
# .cfg files use a different parser than pytest.ini and tox.ini which might
# cause hard to track down problems.
# pytest exclude directories
[tool:pytest]

